mobile menu and search

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(2, auto);
-  padding-top: 1rem;
 }
 
 .active-facets-mobile {
@@ -47,8 +46,6 @@
 
 .facet-filters__label {
   display: block;
-  color: rgba(var(--color-foreground), 0.85);
-  font-size: 1.4rem;
   margin: 0 2rem 0 0;
 }
 
@@ -56,13 +53,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 1.4rem;
   cursor: pointer;
   height: 4.5rem;
   padding: 0 1.5rem;
   min-width: 25rem;
   margin-top: 2.4rem;
-  border: 0.1rem solid rgba(var(--color-foreground), 0.55);
 }
 
 .facet-filters__summary::after {
@@ -89,7 +84,6 @@
 
 .facet-filters__field .select__select,
 .mobile-facets__sort .select__select {
-  border-radius: 0;
   min-width: auto;
   min-height: auto;
   transition: none;
@@ -100,10 +94,7 @@
 }
 
 .facet-filters__sort {
-  background-color: transparent;
   border: 0;
-  border-radius: 0;
-  font-size: 1.4rem;
   height: auto;
   margin: 0;
   padding-left: 0;
@@ -128,29 +119,21 @@
 }
 
 .mobile-facets__sort .select__select:focus-visible {
-  outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
   outline-offset: 0.3rem;
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)), 0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
 }
 
 .mobile-facets__sort .select__select.focused,
 .no-js .mobile-facets__sort .select__select:focus {
-  outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
   outline-offset: 0.3rem;
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)), 0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
 }
 
 .facet-filters__sort:focus-visible {
-  outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
   outline-offset: 1rem;
-  box-shadow: 0 0 0 1rem rgb(var(--color-background)), 0 0 0.2rem 1.2rem rgba(var(--color-foreground), 0.3);
 }
 
 .facet-filters__sort.focused,
 .no-js .facet-filters__sort:focus {
-  outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
   outline-offset: 1rem;
-  box-shadow: 0 0 0 1rem rgb(var(--color-background)), 0 0 0.2rem 1.2rem rgba(var(--color-foreground), 0.3);
 }
 
 .no-js .facet-filters__sort:focus:not(:focus-visible),
@@ -182,8 +165,6 @@
 
 .facets__heading {
   display: block;
-  color: rgba(var(--color-foreground), 0.85);
-  font-size: 1.4rem;
   margin: -1.5rem 2rem 0 0;
 }
 
@@ -196,8 +177,6 @@
 }
 
 .facets__summary {
-  color: rgba(var(--color-foreground), 0.75);
-  font-size: 1.4rem;
   padding: 0 1.75rem 0 0;
   margin-bottom: 1.5rem;
 }
@@ -210,7 +189,6 @@
 
 .facets__disclosure[open] .facets__summary,
 .facets__summary:hover {
-  color: rgb(var(--color-foreground));
 }
 
 .facets__disclosure[open] .facets__display,
@@ -224,50 +202,38 @@
 
 .facets__summary:hover span {
   text-decoration: underline;
-  text-underline-offset: 0.3rem;
 }
 
 .disclosure-has-popup[open] > .facets__summary::before {
   z-index: 2;
 }
 
-.facets__summary > span {
-}
 
 .facets__summary .icon-caret {
   right: 0;
 }
 
 .facets__display {
-  border-width: var(--popup-border-width);
-  border-style: solid;
-  border-color: rgba(var(--color-foreground), var(--popup-border-opacity));
-  border-radius: var(--popup-corner-radius);
-  box-shadow: var(--popup-shadow-horizontal-offset) var(--popup-shadow-vertical-offset) var(--popup-shadow-blur-radius)
-    rgba(var(--color-shadow), var(--popup-shadow-opacity));
-  background-color: rgb(var(--color-background));
   position: absolute;
   top: calc(100% + 0.5rem);
   left: -1.2rem;
   width: 35rem;
   max-height: 55rem;
   overflow-y: auto;
+  z-index: 20;
+  background: white;
+  padding: 1rem;
 }
 
 .facets__header {
-  border-bottom: 1px solid rgba(var(--color-foreground), 0.2);
-  padding: 1.5rem 2rem;
   display: flex;
   justify-content: space-between;
-  font-size: 1.4rem;
   position: sticky;
   top: 0;
-  background-color: rgb(var(--color-background));
   z-index: 1;
 }
 
 .facets__list {
-  padding: 0.5rem 2rem;
 }
 
 .facets__item {
@@ -284,7 +250,6 @@
   padding: 1rem 2rem 1rem 0;
   flex-grow: 1;
   position: relative;
-  font-size: 1.4rem;
   display: flex;
   word-break: break-word;
 }
@@ -306,7 +271,6 @@
 }
 
 .facet-checkbox > svg {
-  background-color: rgb(var(--color-background));
   margin-right: 1.2rem;
   flex-shrink: 0;
 }
@@ -325,8 +289,6 @@
 
 @media screen and (forced-colors: active) {
   .facet-checkbox > svg {
-    background-color: inherit;
-    border: 0.1rem solid rgb(var(--color-background));
   }
 
   .facet-checkbox > input[type='checkbox']:checked ~ .icon-checkmark {
@@ -335,12 +297,10 @@
 }
 
 .facet-checkbox--disabled {
-  color: rgba(var(--color-foreground), 0.4);
 }
 
 .facets__price {
   display: flex;
-  padding: 2rem;
 }
 
 .facets__price .field + .field-currency {
@@ -364,8 +324,6 @@ button.facets__button {
   min-height: 0;
   margin: 0 0 0 0.5rem;
   box-shadow: none;
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
 }
 
 .facets__button-no-js {
@@ -373,8 +331,8 @@ button.facets__button {
 }
 
 .active-facets {
-  display: flex;
-  flex-wrap: wrap;
+/*  display: flex;*/
+/*  flex-wrap: wrap;*/
   width: 100%;
   grid-column: 1 / -1;
   grid-row: 2;
@@ -391,10 +349,6 @@ button.facets__button {
 }
 
 span.active-facets__button-inner {
-  color: rgb(var(--color-foreground));
-  box-shadow: 0 0 0 0.1rem rgb(var(--color-foreground));
-  border-radius: 2.6rem;
-  font-size: 1rem;
   min-height: 0;
   min-width: 0;
   padding: 0.5rem 1rem;
@@ -411,11 +365,9 @@ span.active-facets__button-inner:after {
   align-items: center;
   display: flex;
   justify-content: center;
-  padding-top: 1.5rem;
 }
 
 .active-facets__button-wrapper * {
-  font-size: 1rem;
 }
 
 @media screen and (min-width: 990px) {
@@ -425,7 +377,6 @@ span.active-facets__button-inner:after {
 
   .active-facets__button-wrapper *,
   span.active-facets__button-inner {
-    font-size: 1.4rem;
   }
 }
 
@@ -441,26 +392,20 @@ span.active-facets__button-inner:after {
   }
 
   span.active-facets__button-inner {
-    padding-bottom: 0.3rem;
-    padding-top: 0.3rem;
   }
 
   .active-facets__button-wrapper {
-    padding-top: 0;
     margin-left: 1.2rem;
   }
 }
 
 .active-facets__button:hover .active-facets__button-inner {
-  box-shadow: 0 0 0 0.2rem rgb(var(--color-foreground));
 }
 
 .active-facets__button--light .active-facets__button-inner {
-  box-shadow: 0 0 0 0.1rem rgba(var(--color-foreground), 0.2);
 }
 
 .active-facets__button--light:hover .active-facets__button-inner {
-  box-shadow: 0 0 0 0.2rem rgba(var(--color-foreground), 0.4);
 }
 
 a.active-facets__button:focus-visible {
@@ -481,15 +426,11 @@ a.active-facets__button.focused,
 }
 
 a.active-facets__button:focus-visible .active-facets__button-inner {
-  box-shadow: 0 0 0 0.1rem rgba(var(--color-foreground), 0.2), 0 0 0 0.2rem rgb(var(--color-background)),
-    0 0 0 0.4rem rgb(var(--color-foreground));
   outline: none;
 }
 
 a.active-facets__button.focused .active-facets__button-inner,
 .no-js a.active-facets__button:focus .active-facets__button-inner {
-  box-shadow: 0 0 0 0.1rem rgba(var(--color-foreground), 0.2), 0 0 0 0.2rem rgb(var(--color-background)),
-    0 0 0 0.4rem rgb(var(--color-foreground));
   outline: none;
 }
 
@@ -525,7 +466,6 @@ a.active-facets__button.focused .active-facets__button-inner,
 }
 
 .facets-vertical .active-facets-vertical-filter .active-facets__button-wrapper {
-  padding-top: 0;
   display: flex;
   align-items: flex-start;
 }
@@ -552,7 +492,6 @@ a.active-facets__button.focused .active-facets__button-inner,
   right: 0;
   bottom: 0;
   z-index: 100;
-  background-color: rgba(var(--color-foreground), 0.5);
   pointer-events: none;
 }
 
@@ -571,7 +510,6 @@ a.active-facets__button.focused .active-facets__button-inner,
 }
 
 .mobile-facets__inner {
-  background-color: rgb(var(--color-background));
   width: calc(100% - 5rem);
   margin-left: auto;
   height: 100%;
@@ -581,13 +519,7 @@ a.active-facets__button.focused .active-facets__button-inner,
   max-width: 37.5rem;
   display: flex;
   flex-direction: column;
-  border-color: rgba(var(--color-foreground), var(--drawer-border-opacity));
   border-style: solid;
-  border-width: 0 0 0 var(--drawer-border-width);
-  filter: drop-shadow(
-    var(--drawer-shadow-horizontal-offset) var(--drawer-shadow-vertical-offset) var(--drawer-shadow-blur-radius)
-      rgba(var(--color-shadow), var(--drawer-shadow-opacity))
-  );
 }
 
 .menu-opening .mobile-facets__inner {
@@ -599,8 +531,7 @@ a.active-facets__button.focused .active-facets__button-inner,
 }
 
 .mobile-facets__header {
-  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
-  padding: 1rem 2.5rem;
+  padding-bottom: 1em;
   text-align: center;
   display: flex;
   position: sticky;
@@ -618,13 +549,10 @@ a.active-facets__button.focused .active-facets__button-inner,
 }
 
 .mobile-facets__heading {
-  font-size: calc(var(--font-heading-scale) * 1.4rem);
   margin: 0;
 }
 
 .mobile-facets__count {
-  color: rgba(var(--color-foreground), 0.7);
-  font-size: 1.3rem;
   margin: 0;
   flex-grow: 1;
 }
@@ -636,20 +564,15 @@ a.active-facets__button.focused .active-facets__button-inner,
 .mobile-facets__open {
   text-align: left;
   width: 100%;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
   display: flex;
   align-items: center;
-  color: rgba(var(--color-link), var(--alpha-link));
 }
 
 .mobile-facets__open:hover {
-  color: rgb(var(--color-link));
 }
 
 .mobile-facets__open:hover line,
 .mobile-facets__open:hover circle {
-  stroke: rgb(var(--color-link));
 }
 
 .mobile-facets__open-label {
@@ -658,7 +581,6 @@ a.active-facets__button.focused .active-facets__button-inner,
 
 .mobile-facets__open:hover .mobile-facets__open-label {
   text-decoration: underline;
-  text-underline-offset: 0.3rem;
 }
 
 .mobile-facets__open > * + * {
@@ -671,7 +593,6 @@ a.active-facets__button.focused .active-facets__button-inner,
 
 .mobile-facets__open line,
 .mobile-facets__open circle {
-  stroke: rgba(var(--color-link), var(--alpha-link));
 }
 
 .mobile-facets__close {
@@ -703,9 +624,7 @@ details.menu-opening .mobile-facets__close svg {
 
 .mobile-facets__close-button {
   align-items: center;
-  background-color: transparent;
   display: flex;
-  font-size: 1.4rem;
   font: inherit;
   letter-spacing: inherit;
   margin-top: 1.5rem;
@@ -738,7 +657,6 @@ details.menu-opening .mobile-facets__close svg {
 }
 
 .no-js .mobile-facets__details {
-  border-bottom: 1px solid rgba(var(--color-foreground), 0.04);
 }
 
 .mobile-facets__highlight {
@@ -755,7 +673,6 @@ details.menu-opening .mobile-facets__close svg {
   right: 0px;
   bottom: 0px;
   display: block;
-  background-color: rgba(var(--color-foreground), 0.04);
 }
 
 .mobile-facets__summary {
@@ -828,7 +745,6 @@ input.mobile-facets__checkbox {
 }
 
 .mobile-facets__label > svg {
-  background-color: rgb(var(--color-background));
   position: relative;
   z-index: 2;
   margin-right: 1.2rem;
@@ -857,15 +773,12 @@ input.mobile-facets__checkbox {
 }
 
 .mobile-facets__footer {
-  border-top: 0.1rem solid rgba(var(--color-foreground), 0.08);
   padding: 2rem;
   bottom: 0;
   position: sticky;
   display: flex;
   z-index: 2;
   margin-top: auto;
-  background-color: rgb(var(--color-background));
-  background: var(--gradient-background);
 }
 
 .mobile-facets__footer > * + * {
@@ -903,8 +816,6 @@ input.mobile-facets__checkbox {
 }
 
 .mobile-facets__sort .select__select {
-  background-color: transparent;
-  border-radius: 0;
   box-shadow: none;
   filter: none;
   margin-left: 0.5rem;
@@ -920,7 +831,6 @@ input.mobile-facets__checkbox {
 }
 
 .product-count__text {
-  font-size: 1.4rem;
   margin: 0;
 }
 
@@ -959,28 +869,21 @@ input.mobile-facets__checkbox {
   }
 
   .facets__disclosure-vertical {
-    border-top: 0.1rem solid rgba(var(--color-foreground), 0.1);
     margin-right: 0;
   }
 
   .facets-vertical .facets__summary {
-    padding-top: 1.5rem;
     margin-bottom: 0;
-    padding-bottom: 1.5rem;
   }
 
   .facets__heading--vertical {
     margin: 0 0 1.5rem 0;
-    font-size: 1.5rem;
   }
 
   .facets__header-vertical {
-    padding: 1.5rem 2rem 1.5rem 0;
-    font-size: 1.4rem;
   }
 
   .facets__display-vertical {
-    padding-bottom: 1.5rem;
   }
 
   .facets-vertical .facets-wrapper {
@@ -1019,8 +922,6 @@ input.mobile-facets__checkbox {
 
   .facets-vertical .no-js .facet-filters__field {
     justify-content: flex-start;
-    padding-bottom: 1rem;
-    padding-top: 2rem;
   }
 
   .facets-vertical .facets__price {
