--- a/snippets/header-search.liquid
+++ b/snippets/header-search.liquid
@@ -11,13 +11,8 @@
 <details-modal class="header__search">
   <details>
     <summary class="link focus-inset modal__toggle" aria-haspopup="dialog" aria-label="{{ 'general.search.search' | t }}">
-      <span>
-        <span class="modal__toggle-open" aria-hidden="true" focusable="false">
-          {{ 'general.search.search' | t }}
-        </span>
-        <svg class="modal__toggle-close icon icon-close" aria-hidden="true" focusable="false">
-          <use href="#icon-close">
-        </svg>
+      <span class="modal__toggle-open" aria-hidden="true" focusable="false">
+        {{ 'general.search.search' | t }}
       </span>
     </summary>
     <div class="search-modal modal__content gradient" role="dialog" aria-modal="true" aria-label="{{ 'general.search.search' | t }}">
@@ -29,7 +24,7 @@
         {%- endif -%}
             <form action="{{ routes.search_url }}" method="get" role="search" class="search search-modal__form">
               <div class="field">
-                <input class="search__input field__input"
+                <input class="search__input field__input focus:ring-0"
                   id="{{ input_id }}"
                   type="search"
                   name="q"
@@ -50,21 +45,12 @@
                 >
                 <label class="field__label visually-hidden" for="{{ input_id }}">{{ 'general.search.search' | t }}</label>
                 <input type="hidden" name="options[prefix]" value="last">
-                {% comment %} <button type="reset" class="reset__button field__button{% if search.terms == blank %} hidden{% endif %}" aria-label="{{ 'general.search.reset' | t }}">
-                  <svg class="icon icon-close" aria-hidden="true" focusable="false">
-                    <use xlink:href="#icon-reset">
-                  </svg>
-                </button> {% endcomment %}
                 <button class="search__button field__button" aria-label="{{ 'general.search.search' | t }}">
                   <span class="uppercase icon icon-search" aria-hidden="true" focusable="false">
-                    {{ 'general.search.search' | t }}
+                    {%- render 'icon-search' -%}
                   </span>
                 </button>
-                <button type="button" class="search-modal__close-button modal__close-button" aria-label="{{ 'accessibility.close' | t }}">
-                  <svg class="icon icon-close" aria-hidden="true" focusable="false">
-                    <use href="#icon-close">
-                  </svg>
-                </button>      
+
               </div>
 
               {%- if settings.predictive_search_enabled -%}
